--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-sdl2 = "0.38"
+
+[dependencies.sdl2]
+version = "0.38"
+default-features = false
+features = ["ttf"]
