--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,3 @@
-[package]
-name = "game-of-life"
-version = "0.2.0"
-edition = "2024"
-
-[dependencies]
-
+[workspace]
+resolver = "3"
+members = ["world"]
